# sbr

./: .gitignore  ESP32.workspace.code-workspace  ESP32_DEV.code-workspace  Idea.txt  README.md  links.txt
.github/workflows/: DeployRobot.yml  DeployRobot_NX.yml  DeployRobot_PI.yml  InstallServices_PI.yml  PostgresBackup.yml  Prune.yml  Prune_NX.yml  Prune_PI.yml  RestartPortainer.yml  RestartPortainer_PI.yml  RestartSystem.yml  RestartSystem_NX.yml  RestartSystem_PI.yml  Shutdown.yml  ShutdownSystem.yml  ShutdownSystem_NX.yml  ShutdownSystem_PI.yml  main.yml
DOCU/: Architecture
MODEL/: datalog1.csv  datalog1_fixed.csv  datalog2
SBR_ESP32/: ESP32.workspace.code-workspace
SBR_ESP32/SBR_ESP32_Manager/: .gitignore  platformio.ini
SBR_ESP32/SBR_ESP32_Node01/: .gitignore  README.md  platformio.ini
SBR_ESP32_Manager/: platformio.ini
SBR_ESP32_MotionControl/: platformio.ini
SBR_ESP32_RemoteControl/: platformio.ini
SBR_ESP32_Util/: platformio.ini
SBR_JETSON/: config.txt
SBR_NX/: config.txt
SBR_NX/DevOps/: .env  (+1 more)
SBR_PHONE/: README.md
SBR_SERV/graphql/: Cargo.toml  dockerfile
SBR_SERV/graphql/src/: database.rs  graphql_context.rs  graphql_mutations.rs  graphql_queries.rs  graphql_schema.rs  graphql_types.rs  main.rs  postgres_connection.rs  rabbitmq_connection.rs  redis_connection.rs  type_command.rs
sbr_esp32_remotecontrol/: README.md
sbr_phone_flutter/: README.md
sbr_raspi_machinelearning/: README.md
sbr_raspi_maincontrol/: README.md
sbr_raspi_networkinterface/: README.md
sbr_raspi_vision/: README.md
sbr_raspi_webserver/: README.md
(+1390 files in other folders)
