[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
juniper = "0.15.11"
juniper_actix = "0.4.0"
serde_json = "1.0"
redis = "0.23.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
amiquip = "0.4 "
serde = "1.0"